--- a/.github/workflows/main_my-todo-app-pipeline.yml
+++ b/.github/workflows/main_my-todo-app-pipeline.yml
@@ -1,71 +1,45 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - my-todo-app-pipeline
+name: Build and Deploy to Azure Web App
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: '18.x'
+          node-version: '18'
 
-      - name: npm install, build, and test
+      - name: Install client dependencies
         run: |
+          cd client
           npm install
-          npm run build --if-present
-          npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Build client
+        run: |
+          cd client
+          npm run build
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+      - name: Install server dependencies
+        run: |
+          cd server
+          npm install
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
         with:
-          name: node-app
-          path: release.zip
+          app-name: YOUR_AZURE_WEB_APP_NAME
+          package: ./
+        env:
+          MONGO_URI: ${{ secrets.MONGO_URI }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          SECRET: ${{ secrets.SECRET }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_72670AC8DCC84C2989C19588DA9F3260 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_25895D915C71443CB9B80B7EE5F974AE }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_97A054C9F60A41858A43EDA2E0887BFE }}
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'my-todo-app-pipeline'
-          slot-name: 'Production'
-          package: .
-          
