--- a/.github/workflows/main_my-todo-app-pipeline.yml
+++ b/.github/workflows/main_my-todo-app-pipeline.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: # Add this line to enable manual triggering
 
 jobs:
   build:
@@ -16,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: '14'
 
       - name: Install client dependencies
         run: |
@@ -42,4 +43,3 @@ jobs:
           MONGO_URI: ${{ secrets.MONGO_URI }}
           PASSWORD: ${{ secrets.PASSWORD }}
           SECRET: ${{ secrets.SECRET }}
-
